--- a/ios/tense/Supporting/Expo.plist
+++ b/ios/tense/Supporting/Expo.plist
@@ -11,6 +11,8 @@
     <key>EXUpdatesURL</key>
     <string>https://u.expo.dev/e492ecba-7251-4c51-82c2-6df063029c8c</string>
     <key>EXUpdatesRuntimeVersion</key>
-    <string>1.0.0</string>
+    <string>1.0.1</string>
+    <key>EXUpdatesDisableAntiBrickingMeasures</key>
+    <true/>
   </dict>
 </plist>
