--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.74.4",
@@ -35,6 +36,7 @@
     "expo-video": "~2.0.6",
     "expo-video-thumbnails": "~9.0.3",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^11.7.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.55.0",
