--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@expo/vector-icons": "^14.0.2",
     "@google/genai": "^0.13.0",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-firebase/app": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/flash-list": "^1.8.0",
     "@tanstack/react-query": "^5.74.4",
+    "@vokhuyet/react-native-messy": "^0.2.10",
     "expo": "~52.0.43",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
@@ -45,12 +48,15 @@
     "react-native": "0.76.9",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-controller": "^1.17.1",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.1.0",
+    "react-native-video": "^6.14.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
