--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,7 +8,7 @@ ENV['RCT_NEW_ARCH_ENABLED'] = podfile_properties['newArchEnabled'] == 'true' ? '
 ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR']
 
 platform :ios, podfile_properties['ios.deploymentTarget'] || '15.1'
-use_modular_headers!
+# use_modular_headers!
 install! 'cocoapods',
   :deterministic_uuids => false
 
@@ -16,7 +16,7 @@ prepare_react_native_project!
 
 target 'tense' do
   use_expo_modules!
-
+  pod 'GoogleUtilities', :modular_headers => true
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
   else
