--- a/ios/tense/Info.plist
+++ b/ios/tense/Info.plist
@@ -22,6 +22,8 @@
     <string>1.0.0</string>
     <key>CFBundleSignature</key>
     <string>????</string>
+    <key>NSMicrophoneUsageDescription</key>
+		<string>$(NSMicrophoneUsageDescription)</string>
     <key>CFBundleURLTypes</key>
     <array>
       <dict>
