--- a/package.json
+++ b/package.json
@@ -22,52 +22,54 @@
     "@react-native-firebase/app": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@shopify/flash-list": "^1.8.0",
+    "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "^5.74.4",
     "@vokhuyet/react-native-messy": "^0.2.10",
-    "expo": "~52.0.43",
-    "expo-av": "~15.0.2",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-video": "~2.0.6",
-    "expo-video-thumbnails": "~9.0.3",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.9",
+    "expo-av": "~15.1.4",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-speech": "~13.1.7",
+    "expo-speech-recognition": "^2.0.0",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-updates": "~0.28.13",
+    "expo-video": "~2.1.9",
+    "expo-video-thumbnails": "~9.1.3",
+    "expo-web-browser": "~14.1.6",
     "firebase": "^11.7.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.55.0",
-    "react-native": "0.76.9",
+    "react-native": "0.79.2",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-controller": "^1.17.1",
-    "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-pager-view": "6.7.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-tab-view": "^4.1.0",
     "react-native-video": "^6.14.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-react": "^7.27.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.5",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
